--- a/index.html
+++ b/index.html
@@ -1,18 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style/style.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header></header>
     <div class="info"></div>
     <main></main>
-  
-    <footer></footer>
-</body>
+
+    <footer>
+      <div class="footer__container">
+        <div class="contacts">
+          <h2 class="contacts__title">Контакты</h2>
+          <div class="adress">
+            <img
+              class="adress__img"
+              src="/assets/images/footer/adress.svg"
+              alt="adress-icon"
+            />
+            <p class="adress__title">Город Геленджик</p>
+          </div>
+          <div class="number">
+            <img
+              class="number__img"
+              src="/assets/images/footer/phone.svg"
+              alt="phone-icon"
+            />
+            <p class="number__title">+7 928 428-00-62</p>
+          </div>
+          <div class="email">
+            <img
+              class="email__img"
+              src="/assets/images/footer/email.svg"
+              alt="email-icon"
+            />
+            <p class="email__title">experience@groupgrand.ru</p>
+          </div>
+          <div class="hours">
+            <img
+              class="hours__img"
+              src="/assets/images/footer/clock.svg"
+              alt="clock-icon"
+            />
+            <p class="hours__title">
+              Пн - Пт: 9:00 - 18:00 <br />
+              Сб: 9:00 - 17:00 <br />
+              Вс - выходной
+            </p>
+          </div>
+        </div>
+
+        <div class="social">
+          <h3 class="social__title">Написать нам:</h3>
+          <a class="social__link" href="#"
+            ><img src="/assets/images/footer/whatsap.svg" alt="whatsap"
+          /></a>
+          <a class="social__link" href="#"
+            ><img src="/assets/images/footer/instagram.svg" alt="instagram"
+          /></a>
+        </div>
+
+        <div class="map">
+          <a
+            class="map__link"
+            href="https://www.google.com/maps/@44.5599069,38.0934554,16.94z"
+          >
+            <img src="/assets/images/footer/map.svg" alt="map"
+          /></a>
+        </div>
+
+        <div class="bottom">
+          <img
+            class="bottom__logo"
+            src="/assets/images/footer/logo.svg"
+            alt="logo"
+          />
+          <nav class="nav">
+            <a class="nav__link" href="#">МАРШРУТЫ</a>
+            <a class="nav__link" href="#">ГАЛЕРЕЯ</a>
+            <a class="nav__link" href="#">ВОПРОС-ОТВЕТ</a>
+            <a class="nav__link" href="#">КОНТАКТЫ</a>
+            <a class="nav__link" href="#">УСЛОВИЯ</a>
+            <a class="nav__link" href="#">СПЕЦПРЕДЛОЖЕНИЯ</a>
+          </nav>
+        </div>
+
+        <div class="copyrights">
+          © CFMOTO Experience Kuban. Внедорожный полигон CFMOTO и прокат
+          квадроциклов в Геленджике
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
