--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>CFMOTO</title>
   </head>
 
   <body>
@@ -74,12 +74,7 @@
         </div>
 
         <div class="map">
-          <a
-            class="map__link"
-            href="https://www.google.com/maps/@44.5599069,38.0934554,16.94z"
-          >
-            <img src="/assets/images/footer/map.svg" alt="map"
-          /></a>
+          <img class="map__img" src="/assets/images/footer/map.svg" alt="map" />
         </div>
 
         <div class="bottom">
