добавлен нав в хедер

--- a/index.html
+++ b/index.html
@@ -6,19 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/style/normalizer.css" />
     <link rel="stylesheet" href="./assets/style/style.css" />
+    <link rel="stylesheet" href="./assets/images/sasha/фото.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
-
     <title>CFMOTO</title>
   </head>
 
   <body>
-    <header></header>
+    <header class="header">
+      <div class="header__nav">
+        <div class="header__nav_logo"><img src="./assets/images/sasha/лого.png" alt="logo"></div>
+        <div class="header__nav_menu">
+          <a href="#">МАРШРУТЫ</a>
+          <a href="#">ГАЛЕРЕЯ</a>
+          <a href="#">ВОПРОС-ОТВЕТ</a>
+          <a href="#">КОНТАКТЫ</a>
+          <a id="blue" href="#">ЗАБРОНИРОВАТЬ</a>
+        </div>
+        <div class="header__nav_callme">
+          <div class="header__tel">
+            <a><img src="./assets/images/sasha/трубкател.png"></a>
+            <a><img src="./assets/images/sasha/+7 928 333 26 45.png"></a>
+          </div>
+          <div class="header__nav_button">
+            <input class="header__form" type="image" src="./assets/images/sasha/сераякнопка.png" alt="#">
+            <img class="header__call" src="./assets/images/sasha/Перезвоните мне.png"></input>  
+          </div>
+        </div>
+      </div>
+      
+      
+    </header>
+  
+
+
+
     <div class="info"></div>
+
     <main></main>
 
     <footer>
