--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
   <header class="header">
+
     <div class="header__nav">
       <div class="header__nav_logo"><img src="./assets/images/sasha/лого.png" alt="logo"></div>
       <div class="header__nav_menu">
@@ -37,8 +38,23 @@
       </div>
     </div>
 
+      <div class="header__bigtext">
+        <p>Экскурсии на
+          квадроциклах
+          в Геленджике</p>
+      </div>
+      <div class="header__smalltext">
+        <p>приезжайте за новыми ощущениями и эмоциями!</p>
+      </div>
+      <div class="header__bluebutton">
+        <input class="header__bluebutton_items" type="image" src="./assets/images/sasha/синяякнопка.png" alt="#">
+            <img class="header__route" src="./assets/images/sasha/Подобрать маршрут.png">
+            <img class="header__cursor" src="./assets/images/sasha/стрелка.png">
+          </input>  
+      </div>      
+    </header>
 
-  </header>
+
 
   <div class="info">
     <div class="container">
