--- a/index.html
+++ b/index.html
@@ -75,7 +75,102 @@
     </div>
   </div>
 
-  <main></main>
+  <main>
+    <section class="routs">
+      <h2 class="routs__title">Наши маршруты</h2>
+      <!--BASIC ROUTE-->
+      <div class="basic">
+        <div class="route__content">
+          <p class="route__title-2">БАЗОВЫЙ</p>
+          <p class="route__price">от 4000</p>
+          <div class="route__details">
+            <p class="route__time">Время в пути: <span class="route__time--bold">1,5 - 2 часа</span></p>
+            <p class="route__distance">Расстояние: <span class="route__distance--bold">20 - 25 км</span></p>
+            <p class="route__complexity">Сложность: <span class="route__complexity--bold">5***</span></p>
+          </div>
+          <div class="route__description">
+            <p class="route__description-title">маршрут</p>
+            <p class="route__description-text">Смотровая - Родник - Камень Джигита - Адербиевка - Гора Нексис -
+              -Грозовые Ворота - Шашлыки - Цыгельский водопад (чаша любви) -
+              -Форсаж</p>
+          </div>
+          <button class="btn-details">
+            <a class="btn-details__link" href="#">Подробнее</a>
+          </button>
+          <button class="btn-reserve">
+            <a class="btn-reserve__link" href="#">Забронировать</a>
+          </button>
+        </div>
+        <div class="basic__slider">
+
+
+        </div>
+      </div>
+
+      <!--EXTANTION ROUTE-->
+
+      <div class="extantion">
+        <div class="route__content">
+          <p class="route__title-2">РАСШИРЕННЫЙ</p>
+          <p class="route__price">от 16000</p>
+          <div class="route__details">
+            <p class="route__time">Время в пути: <span class="route__time--bold">6 - 8 часов</span></p>
+            <p class="route__distance">Расстояние: <span class="route__distance--bold">60 - 70 км</span></p>
+            <p class="route__complexity">Сложность: <span class="route__complexity--bold">5***</span></p>
+          </div>
+          <div class="route__description">
+            <p class="route__description-title">маршрут</p>
+            <p class="route__description-text">Смотровая - Родник - Камень Джигита - Адербиевка - Гора Нексис -
+              -Грозовые Ворота - Шашлыки - Цыгельский водопад (чаша любви) -
+              -Форсаж</p>
+          </div>
+          <button class="btn-details">
+            <a class="btn-details__link" href="#">Подробнее</a>
+          </button>
+          <button class="btn-reserve">
+            <a class="btn-reserve__link" href="#">Забронировать</a>
+          </button>
+        </div>
+        <div class="extantion__slider">
+
+
+        </div>
+      </div>
+
+      <!--EXPERIENCE ROUTE-->
+
+      <div class="experience">
+        <div class="route__content">
+          <p class="route__title-2">Experience</p>
+          <p class="route__price">от 7000</p>
+          <div class="route__details">
+            <p class="route__time">Время в пути: <span class="route__time--bold">4 часа</span></p>
+            <p class="route__distance">Расстояние: <span class="route__distance--bold">40 - 50 км</span></p>
+            <p class="route__complexity">Сложность: <span class="route__complexity--bold">5***</span></p>
+          </div>
+          <div class="route__description">
+            <p class="route__description-title">маршрут</p>
+            <p class="route__description-text">Форсаж - Голубая бухта – Заброшенная Тур База – Сухогруз Рио –
+              Форсаж</p>
+          </div>
+          <button class="btn-details">
+            <a class="btn-details__link" href="#">Подробнее</a>
+          </button>
+          <button class="btn-reserve">
+            <a class="btn-reserve__link" href="#">Забронировать</a>
+          </button>
+        </div>
+        <div class="experience__slider">
+
+
+        </div>
+      </div>
+
+
+    </section>
+
+
+  </main>
 
   <footer>
     <div class="footer__container">
