global-container width

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div class="global-container">
   <header class="header">
     <div class="header__nav">
       <div class="header__nav_logo"><img src="./assets/images/sasha/лого.png" alt="logo"></div>
@@ -226,5 +227,6 @@
       </div>
     </div>
   </footer>
+  </div>
 </body>
 </html>
