--- a/index.html
+++ b/index.html
@@ -177,21 +177,21 @@
     <div class="footer__container">
       <div class="contacts">
         <h2 class="contacts__title">Контакты</h2>
-        <div class="adress">
-          <img class="adress__img" src="/assets/images/footer/adress.svg" alt="adress-icon" />
-          <p class="adress__title">Город Геленджик</p>
+        <div class="connect adress">
+          <img class="connect__img " src="/assets/images/footer/adress.svg" alt="adress-icon" />
+          <p class="connect__title ">Город Геленджик</p>
         </div>
-        <div class="number">
-          <img class="number__img" src="/assets/images/footer/phone.svg" alt="phone-icon" />
-          <p class="number__title">+7 928 428-00-62</p>
+        <div class="connect number">
+          <img class="connect__img " src="/assets/images/footer/phone.svg" alt="phone-icon" />
+          <p class="connect__title ">+7 928 428-00-62</p>
         </div>
-        <div class="email">
-          <img class="email__img" src="/assets/images/footer/email.svg" alt="email-icon" />
-          <p class="email__title">experience@groupgrand.ru</p>
+        <div class="connect email">
+          <img class="connect__img " src="/assets/images/footer/email.svg" alt="email-icon" />
+          <p class="connect__title">experience@groupgrand.ru</p>
         </div>
-        <div class="hours">
-          <img class="hours__img" src="/assets/images/footer/clock.svg" alt="clock-icon" />
-          <p class="hours__title">
+        <div class="connect hours">
+          <img class="connect__img " src="/assets/images/footer/clock.svg" alt="clock-icon" />
+          <p class="connect__title ">
             Пн - Пт: 9:00 - 18:00 <br />
             Сб: 9:00 - 17:00 <br />
             Вс - выходной
