--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
 
       <div class="social">
         <h3 class="social__title">Написать нам:</h3>
-        <a class="social__link" href="#"><img src="/assets/images/footer/whatsap.svg" alt="whatsap" /></a>
-        <a class="social__link" href="#"><img src="/assets/images/footer/instagram.svg" alt="instagram" /></a>
+        <a class="social__link" href="#"><img class="social__img social__img_whatsap" src="/assets/images/footer/whatsap.svg" alt="whatsap" /></a>
+        <a class="social__link" href="#"><img class="social__img social__img_instagram" src="/assets/images/footer/instagram.svg" alt="instagram" /></a>
       </div>
 
       <div class="map">
