--- a/index.html
+++ b/index.html
@@ -37,9 +37,23 @@
         </div>
       </div>
     </div>
-
-
+    
+    <div class="header__bigtext">
+      <p>Экскурсии на
+        квадроциклах
+        в Геленджике</p>
+    </div>
+    <div class="header__smalltext">
+      <p>приезжайте за новыми ощущениями и эмоциями!</p>
+    </div>
+    <div class="header__bluebutton">
+      <input class="header__bluebutton_items" type="image" src="./assets/images/sasha/синяякнопка.png" alt="#">
+          <img class="header__route" src="./assets/images/sasha/Подобрать маршрут.png">
+          <img class="header__cursor" src="./assets/images/sasha/стрелка.png">
+        </input>  
+    </div>      
   </header>
+
 
   <div class="info">
     <div class="container">
