--- a/index.html
+++ b/index.html
@@ -169,8 +169,62 @@
 
 
     </section>
+<!--Main Form+Bonus down-->
+<div class="feedback">
+  <div class="feedback__container">
+    <img class="feedback__quad" src="/assets/images/questionsSection/quad.svg" alt="quad"/>
+    <img class="feedback__spring" src="/assets/images/questionsSection/spring.svg" alt="spring"/>
+  <h2 class="feedback__title">Вопросы-ответы</h2>
+  <div class="questions">
+    <div class="block">
+    <input type="checkbox" id="ask-1" class="block__hide"/>
+    <label  class="block__label" for="ask-1" >Актуальный вопрос?</label>
+    <div class="answer">
+      Lorem Ipsum is simply dummy text of the printing and typesetting <br/> industry. Lorem Ipsum has been the industry's standard dummy text <br/>  ever since the 1500s, when an unknown printer took a galley of type  <br/> and scrambled it to make a type specimen book.
+    </div>
+    </div>
+    <div class="block">
+      <input type="checkbox" id="ask-2" class="block__hide"/>
+      <label class="block__label"  for="ask-2" >Актуальный вопрос?</label>
+      <div class="answer">
+        Lorem Ipsum is simply dummy text of the printing and typesetting <br/> industry. Lorem Ipsum has been the industry's standard dummy text <br/>  ever since the 1500s, when an unknown printer took a galley of type  <br/> and scrambled it to make a type specimen book.
+      </div>
+      </div> 
+      <div class="block">
+        <input type="checkbox" id="ask-3" class="block__hide"/>
+        <label class="block__label" for="ask-3" >Актуальный вопрос?</label>
+        <div class="answer">
+          Lorem Ipsum is simply dummy text of the printing and typesetting <br/> industry. Lorem Ipsum has been the industry's standard dummy text <br/>  ever since the 1500s, when an unknown printer took a galley of type  <br/> and scrambled it to make a type specimen book.
+        </div>
+        </div> 
+        <div class="block">
+          <input type="checkbox" id="ask-4" class="block__hide"/>
+          <label class="block__label"  for="ask-4" >Актуальный вопрос?</label>
+          <div class="answer">
+            Lorem Ipsum is simply dummy text of the printing and typesetting <br/> industry. Lorem Ipsum has been the industry's standard dummy text <br/>  ever since the 1500s, when an unknown printer took a galley of type  <br/> and scrambled it to make a type specimen book.
+          </div>
+          </div>
+  </div>
+  <div class="ask">
+    <img class="ask__img" src="/assets/images/questionsSection/question-icon.png" alt="question-icon"/>
+    <h3 class="ask__title">Есть вопросы?</h3>
+    <p>Не стесняйтесь обращаться к нам, <br/> если у вас есть какие-либо вопросы, предложения <br/>  или идеи для сотрудничества</p>
+    <button class="ask__button">Задать вопрос</button>
+  </div>
+</div>
+</div>
 
-
+<div class="extra">
+  <h2 class="extra__title">Дополнительные услуги</h2>
+  <div> </div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
   </main>
 
   <footer>
