--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 
     </section>
-<!--Main Form+Bonus down-->
+<!--------------------------------Question section------------------------------->
 <div class="feedback">
   <div class="feedback__container">
     <img class="feedback__quad" src="/assets/images/questionsSection/quad.svg" alt="quad"/>
@@ -227,20 +227,46 @@
   </div>
 </div>
 </div>
-
+<!--------------------------------------Extra section------------------------------------>
 <div class="extra">
+  <div class="extra-container">
   <h2 class="extra__title">Дополнительные услуги</h2>
-  <div> </div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
+  <figure class="photo photo-one">
+    <img class="photo__img" src="/assets/images/questionsSection/first-img.png" alt="img">
+    <figcaption>Эвакуация, ремонт <br/> квадроциклов</figcaption>
+   </figure>
+   <figure class="photo photo-two">
+    <img class="photo__img" src="/assets/images/questionsSection/second-img.png" alt="img">
+    <figcaption>Фото, видеосъемка</figcaption>
+   </figure>
+   <figure class="photo photo-three">
+    <img class="photo__img" src="/assets/images/questionsSection/third-img.png" alt="img">
+    <figcaption>Транспортировка <br/>техники</figcaption>
+   </figure>
+   <figure class="photo photo-four">
+    <img class="photo__img" src="/assets/images/questionsSection/fourth-img.png" alt="img">
+    <figcaption>Заправка, чекап, мойка</figcaption>
+   </figure>
+   <figure class="photo photo-five">
+    <img class="photo__img" src="/assets/images/questionsSection/fifth-img.png" alt="img">
+    <figcaption>Корпоративы,<br/> тимбилдинги</figcaption>
+   </figure>
+   <figure class="photo photo-six">
+    <img class="photo__img" src="/assets/images/questionsSection/six-img.png" alt="img">
+    <figcaption>Выездной кейтеринг</figcaption>
+   </figure>
+   <figure class="photo photo-seven">
+    <img class="photo__img" src="/assets/images/questionsSection/seven-img.png" alt="img">
+    <figcaption>Индивидуальные <br/>маршруты</figcaption>
+   </figure>
+   <figure class="photo photo-eight">
+    <img class="photo__img" src="/assets/images/questionsSection/eight-img.png" alt="img">
+    <figcaption>Услуги гида</figcaption>
+   </figure>
+</div>
 </div>
   </main>
-
+<!-----------------------------------Footer----------------------------------------------->
   <footer>
     <div class="footer__container">
       <div class="contacts">
