--- a/index.html
+++ b/index.html
@@ -192,28 +192,28 @@
   <div class="questions">
     <div class="block">
     <input type="checkbox" id="ask-1" class="block__hide"/>
-    <label  class="block__label" for="ask-1" >Актуальный вопрос?</label>
+    <label  class="block__label" for="ask-1" >Актуальный вопрос?<img class="block__img" src="/assets/images/questionsSection/arrow.svg" alt="arrow"/></label>
     <div class="answer">
       Lorem Ipsum is simply dummy text of the printing and typesetting <br/> industry. Lorem Ipsum has been the industry's standard dummy text <br/>  ever since the 1500s, when an unknown printer took a galley of type  <br/> and scrambled it to make a type specimen book.
     </div>
     </div>
     <div class="block">
       <input type="checkbox" id="ask-2" class="block__hide"/>
-      <label class="block__label"  for="ask-2" >Актуальный вопрос?</label>
+      <label class="block__label"  for="ask-2" >Актуальный вопрос?<img class="block__img" src="/assets/images/questionsSection/arrow.svg" alt="arrow"/></label>
       <div class="answer">
         Lorem Ipsum is simply dummy text of the printing and typesetting <br/> industry. Lorem Ipsum has been the industry's standard dummy text <br/>  ever since the 1500s, when an unknown printer took a galley of type  <br/> and scrambled it to make a type specimen book.
       </div>
       </div> 
       <div class="block">
         <input type="checkbox" id="ask-3" class="block__hide"/>
-        <label class="block__label" for="ask-3" >Актуальный вопрос?</label>
+        <label class="block__label" for="ask-3" >Актуальный вопрос?<img class="block__img" src="/assets/images/questionsSection/arrow.svg" alt="arrow"/></label>
         <div class="answer">
           Lorem Ipsum is simply dummy text of the printing and typesetting <br/> industry. Lorem Ipsum has been the industry's standard dummy text <br/>  ever since the 1500s, when an unknown printer took a galley of type  <br/> and scrambled it to make a type specimen book.
         </div>
         </div> 
         <div class="block">
           <input type="checkbox" id="ask-4" class="block__hide"/>
-          <label class="block__label"  for="ask-4" >Актуальный вопрос?</label>
+          <label class="block__label"  for="ask-4" >Актуальный вопрос?<img class="block__img" src="/assets/images/questionsSection/arrow.svg" alt="arrow"/></label>
           <div class="answer">
             Lorem Ipsum is simply dummy text of the printing and typesetting <br/> industry. Lorem Ipsum has been the industry's standard dummy text <br/>  ever since the 1500s, when an unknown printer took a galley of type  <br/> and scrambled it to make a type specimen book.
           </div>
@@ -233,35 +233,35 @@
   <h2 class="extra__title">Дополнительные услуги</h2>
   <figure class="photo photo-one">
     <img class="photo__img" src="/assets/images/questionsSection/first-img.png" alt="img">
-    <figcaption>Эвакуация, ремонт <br/> квадроциклов</figcaption>
+    <figcaption class="photo__title"><a class="photo__link" href="#">Эвакуация, ремонт <br/> квадроциклов</a></figcaption>
    </figure>
    <figure class="photo photo-two">
     <img class="photo__img" src="/assets/images/questionsSection/second-img.png" alt="img">
-    <figcaption>Фото, видеосъемка</figcaption>
+    <figcaption class="photo__title"><a class="photo__link" href="#">Фото, видеосъемка</a></figcaption>
    </figure>
    <figure class="photo photo-three">
     <img class="photo__img" src="/assets/images/questionsSection/third-img.png" alt="img">
-    <figcaption>Транспортировка <br/>техники</figcaption>
+    <figcaption class="photo__title"><a class="photo__link" href="#">Транспортировка <br/>техники</a></figcaption>
    </figure>
    <figure class="photo photo-four">
     <img class="photo__img" src="/assets/images/questionsSection/fourth-img.png" alt="img">
-    <figcaption>Заправка, чекап, мойка</figcaption>
+    <figcaption class="photo__title"><a class="photo__link" href="#">Заправка, чекап, мойка</a></figcaption>
    </figure>
    <figure class="photo photo-five">
     <img class="photo__img" src="/assets/images/questionsSection/fifth-img.png" alt="img">
-    <figcaption>Корпоративы,<br/> тимбилдинги</figcaption>
+    <figcaption class="photo__title"><a class="photo__link" href="#">Корпоративы,<br/> тимбилдинги</a></figcaption>
    </figure>
    <figure class="photo photo-six">
     <img class="photo__img" src="/assets/images/questionsSection/six-img.png" alt="img">
-    <figcaption>Выездной кейтеринг</figcaption>
+    <figcaption class="photo__title"><a class="photo__link" href="#">Выездной кейтеринг</a></figcaption>
    </figure>
    <figure class="photo photo-seven">
     <img class="photo__img" src="/assets/images/questionsSection/seven-img.png" alt="img">
-    <figcaption>Индивидуальные <br/>маршруты</figcaption>
+    <figcaption class="photo__title"><a class="photo__link" href="#">Индивидуальные <br/>маршруты</a></figcaption>
    </figure>
    <figure class="photo photo-eight">
     <img class="photo__img" src="/assets/images/questionsSection/eight-img.png" alt="img">
-    <figcaption>Услуги гида</figcaption>
+    <figcaption class="photo__title"><a class="photo__link" href="#">Услуги гида</a></figcaption>
    </figure>
 </div>
 </div>
