--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           </div>
   </div>
   <div class="ask">
-    <img class="ask__img" src="/assets/images/questionsSection/question-icon.png" alt="question-icon"/>
+    <img class="ask__img" src="/assets/images/questionsSection/question-icon.svg" alt="question-icon"/>
     <h3 class="ask__title">Есть вопросы?</h3>
     <p>Не стесняйтесь обращаться к нам, <br/> если у вас есть какие-либо вопросы, предложения <br/>  или идеи для сотрудничества</p>
     <button class="ask__button">Задать вопрос</button>
@@ -232,35 +232,35 @@
   <div class="extra-container">
   <h2 class="extra__title">Дополнительные услуги</h2>
   <figure class="photo photo-one">
-    <img class="photo__img" src="/assets/images/questionsSection/first-img.png" alt="img">
+    <img class="photo__img" src="/assets/images/questionsSection/one-img.svg" alt="img">
     <figcaption class="photo__title"><a class="photo__link" href="#">Эвакуация, ремонт <br/> квадроциклов</a></figcaption>
    </figure>
    <figure class="photo photo-two">
-    <img class="photo__img" src="/assets/images/questionsSection/second-img.png" alt="img">
+    <img class="photo__img" src="/assets/images/questionsSection/two-img.svg" alt="img">
     <figcaption class="photo__title"><a class="photo__link" href="#">Фото, видеосъемка</a></figcaption>
    </figure>
    <figure class="photo photo-three">
-    <img class="photo__img" src="/assets/images/questionsSection/third-img.png" alt="img">
+    <img class="photo__img" src="/assets/images/questionsSection/three-img.svg" alt="img">
     <figcaption class="photo__title"><a class="photo__link" href="#">Транспортировка <br/>техники</a></figcaption>
    </figure>
    <figure class="photo photo-four">
-    <img class="photo__img" src="/assets/images/questionsSection/fourth-img.png" alt="img">
+    <img class="photo__img" src="/assets/images/questionsSection/four-img.svg" alt="img">
     <figcaption class="photo__title"><a class="photo__link" href="#">Заправка, чекап, мойка</a></figcaption>
    </figure>
    <figure class="photo photo-five">
-    <img class="photo__img" src="/assets/images/questionsSection/fifth-img.png" alt="img">
+    <img class="photo__img" src="/assets/images/questionsSection/five-img.svg" alt="img">
     <figcaption class="photo__title"><a class="photo__link" href="#">Корпоративы,<br/> тимбилдинги</a></figcaption>
    </figure>
    <figure class="photo photo-six">
-    <img class="photo__img" src="/assets/images/questionsSection/six-img.png" alt="img">
+    <img class="photo__img" src="/assets/images/questionsSection/six-img.svg" alt="img">
     <figcaption class="photo__title"><a class="photo__link" href="#">Выездной кейтеринг</a></figcaption>
    </figure>
    <figure class="photo photo-seven">
-    <img class="photo__img" src="/assets/images/questionsSection/seven-img.png" alt="img">
+    <img class="photo__img" src="/assets/images/questionsSection/seven-img.svg" alt="img">
     <figcaption class="photo__title"><a class="photo__link" href="#">Индивидуальные <br/>маршруты</a></figcaption>
    </figure>
    <figure class="photo photo-eight">
-    <img class="photo__img" src="/assets/images/questionsSection/eight-img.png" alt="img">
+    <img class="photo__img" src="/assets/images/questionsSection/eight-img.svg" alt="img">
     <figcaption class="photo__title"><a class="photo__link" href="#">Услуги гида</a></figcaption>
    </figure>
 </div>
