--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       </div>
       <div class="header__nav_callme">
         <div class="header__tel">
-          <a><img src="./assets/images/sasha/трубкател.png"></a>
-          <a><img src="./assets/images/sasha/+7 928 333 26 45.png"></a>
+          <a><img src="./assets/images/sasha/Vector.svg"></a>
+          <a><img src="./assets/images/sasha/+7 928 333 26 45.svg"></a>
         </div>
         <div class="header__nav_button">
-          <input class="header__form" type="image" src="./assets/images/sasha/сераякнопка.png" alt="#">
-          <img class="header__call" src="./assets/images/sasha/Перезвоните мне.png"></input>
+          <input class="header__form" type="image" src="./assets/images/sasha/Rectangle 4.svg" alt="#">
+          <img class="header__call" src="./assets/images/sasha/Перезвоните мне.svg"></input>
         </div>
       </div>
     </div>
@@ -47,8 +47,8 @@
       <p>приезжайте за новыми ощущениями и эмоциями!</p>
     </div>
     <div class="header__bluebutton">
-      <input class="header__bluebutton_items" type="image" src="./assets/images/sasha/синяякнопка.png" alt="#">
-          <img class="header__route" src="./assets/images/sasha/Подобрать маршрут.png">
+      <input class="header__bluebutton_items" type="image" src="./assets/images/sasha/Rectangle 2.svg" alt="#">
+          <img class="header__route" src="./assets/images/sasha/Подобрать маршрут.svg">
           <img class="header__cursor" src="./assets/images/sasha/стрелка.png">
         </input>  
     </div>      
@@ -181,8 +181,59 @@
         </div>
       </div>
 
-
     </section>
+
+     <!--названия поменяйте как дойдёте до своего блока. они здесь сейчас для удобства-->
+<div class="zatrudnyaetes_vibrat_marshrut"></div>
+<div class="photoslider"></div>
+<div class="video"></div>
+<div class="nasha_komanda"></div>
+<div class="usloviya_predost_uslug"></div>
+
+
+<div class="main__offer">
+  <div class="main__offer_text">
+    <p>Спецпредложения</p>
+  </div>
+
+  <div class="main__cards">
+    <div class="main_item main__item_left">
+      <div class="main__item_back"><img src="./assets/images/sasha/визитка.svg" alt="#">
+        <div class="item_container">
+          <div><img class="bantdom" src="./assets/images/sasha/бантик.jpg"></div>
+          <div class="text">
+          <div class="card-title">Cкидка 10%</div>
+          <div class="card-title2">на День Рождения</div>
+          <div class="card-title3">в честь Дня Рождения - дарим
+            имениннику скидку 10%</div>
+            <div class="item_picture"><img src="./assets/images/sasha/клякса.svg"></div>
+        </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="main_item main__item_right">
+      <div class="main__item_back"><img src="./assets/images/sasha/визитка.svg" alt="#">
+        <div class="item_container">
+          <div><img class="bantdom" src="./assets/images/sasha/домик.jpg"></div>
+          <div class="text">
+          <div class="card-title">Cкидка 10%</div>
+          <div class="card-title3">клиентам Ex-Kuban на услуги
+            Загородного клуба Ягода</br> Малина</div>
+            <div class="main__offer_button">
+              <input class="main__offer_buttoncircle" type="image" src="./assets/images/sasha/Rectangle 5.svg" alt="#">
+              <img class="main__offer_buttonword" src="./assets/images/sasha/Подробнее.svg"></div>
+              <div class="item_picture2"><img src="./assets/images/sasha/клякса.svg"></div>
+            </div>
+    </div>
+    
+  </div>
+</div>
+
+
+<div class="sertificate"></div>
+<div class="vopros_otvet"></div>
+<div class="dop_uslugi"></div>
 
 
   </main>
