--- a/index.html
+++ b/index.html
@@ -187,7 +187,33 @@
       <div class="zatrudnyaetes_vibrat_marshrut"></div>
       <div class="photoslider"></div>
       <div class="video"></div>
-      <div class="Team"></div>
+
+      <div class="team">
+        <div class="team-container">
+          <h2 class="team-title">Наша команда</h2>
+          <figure class="t_photo photo_Yl">
+            <img class="t_photo__img" src="./assets/images/team/Foto_Yl.png" alt="img">
+            <figcaption class="t_photo__title"><a class="t_photo__link" href="#">Юлиана</a></figcaption>
+            <p class="function_team">руководитель</p>
+          </figure>
+          <figure class="t_photo photo_Mx">
+            <img class="t_photo__img" src="./assets/images/team/Foto_Mx.png" alt="img">
+            <figcaption class="t_photo__title"><a class="t_photo__link" href="#">Максим</a></figcaption>
+            <p class="function_team">старший инструктор</p>
+          </figure>
+          <figure class="t_photo photo_Kr">
+            <img class="t_photo__img" src="./assets/images/team/Foto_Kr.png" alt="img">
+            <figcaption class="t_photo__title"><a class="t_photo__link" href="#">Кристина</a></figcaption>
+            <p class="function_team">администратор</p>
+          </figure>
+          <figure class="t_photo photo_Yr">
+            <img class="t_photo__img" src="./assets/images/team/Foto_Yr.png" alt="img">
+            <figcaption class="t_photo__title"><a class="t_photo__link" href="#">Юрий</a></figcaption>
+            <p class="function_team">старший механик</p>
+          </figure>
+        </div>
+      </div>
+
       <div class="usloviya_predost_uslug"></div>
 
 
