--- a/index.html
+++ b/index.html
@@ -185,7 +185,29 @@
 
       <!--названия поменяйте как дойдёте до своего блока. они здесь сейчас для удобства-->
       <div class="zatrudnyaetes_vibrat_marshrut"></div>
-      <div class="photoslider"></div>
+
+
+      <div class="slider">
+        <div class="slider_item">
+          <img class="pic1" src="/assets/images/slider/000257 1.png" alt="">
+        </div>
+        <div class="slider_item">
+          <img class="pic2" src="/assets/images/slider/000248 1.png" alt="">
+        </div>
+        <div class="slider_item">
+          <img class="pic3" src="/assets/images/slider/000253 1.png" alt="">
+        </div>
+        <div class="slider_item">
+          <img class="pic4" src="/assets/images/slider/000259 1.png" alt="">
+        </div>
+        <div class="slider_item">
+          <img class="pic5" src="/assets/images/slider/000269 2.png" alt="">
+        </div>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js">
+      </script>
+      <script src="/assets/js/slick.min.js"></script>
+      <script src="/assets/js/script.js"></script>
       <div class="video"></div>
 
       <div class="team">
