--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
 
       <div class="slider">
         <div class="slider_item">
-          <img class="pic1" src="/assets/images/slider/000257 1.png" alt="">
+          <img class="pic1" src="/assets/images/slider/000248 2.png" alt="">
         </div>
         <div class="slider_item">
-          <img class="pic2" src="/assets/images/slider/000248 1.png" alt="">
+          <img class="pic2" src="/assets/images/slider/000245 2.png" alt="">
         </div>
         <div class="slider_item">
           <img class="pic3" src="/assets/images/slider/000253 1.png" alt="">
@@ -204,11 +204,6 @@
           <img class="pic5" src="/assets/images/slider/000269 2.png" alt="">
         </div>
       </div>
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js">
-      </script>
-      <script src="/assets/js/slick.min.js"></script>
-      <script src="/assets/js/script.js"></script>
-      <div class="video"></div>
 
       <div class="team">
         <div class="team-container">
@@ -445,6 +440,11 @@
       </div>
     </footer>
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js">
+  </script>
+  <script src="./assets/js/slick.min.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
