--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="global-container">
   <header class="header">
     <div class="header__nav">
-      <div class="header__nav_logo"><img src="./assets/images/sasha/лого.png" alt="logo"></div>
+      <div class="header__nav_logo"><img src="./assets/images/sasha/лого.svg" alt="logo"></div>
       <div class="header__nav_menu">
         <a href="#">МАРШРУТЫ</a>
         <a href="#">ГАЛЕРЕЯ</a>
@@ -183,7 +183,7 @@
 
     </section>
 
-     <!--названия поменяйте как дойдёте до своего блока. они здесь сейчас для удобства-->
+ <!--------------------------------Sale section------------------------------->
 <div class="zatrudnyaetes_vibrat_marshrut"></div>
 <div class="photoslider"></div>
 <div class="video"></div>
@@ -226,16 +226,38 @@
               <div class="item_picture2"><img src="./assets/images/sasha/клякса.svg"></div>
             </div>
     </div>
-    
   </div>
 </div>
 </div>
+<!--------------------------------Sertificate section------------------------------->
+<div class="main__sertificate">
+  <div class="main__sertificate_title"><img src="./assets/images/sasha/Подарочный сертификат.svg"></div>
+  <span class="main__sertificate_title2">Хотите сделать оригинальный подарок?</span>
+  <span class="main__sertificate_title2">Подарите незабываемые эмоции - лучший подарок</span>
+  <div class="main__sertificate_container">
+    <div class="main__blocktext">
+      <div class="main__textcard"><img src="./assets/images/sasha/Хотите.svg"></div>
+      <input class="main__input" type="image" src="./assets/images/sasha/Rectangle 5.svg" alt="#">
+      <input class="main__input2" type="image" src="./assets/images/sasha/Подберем сертификат для вас.svg" alt="#">
+      
+    </div>
+    <div class="main__card">
+      <div class="main__card_lenta"><img src="./assets/images/sasha/Layer_2_1_.svg"></div>
+      <div class="main__card_bant"><img src="./assets/images/sasha/bant.svg"></div>
+      <div class="main__card_blot"><img src="./assets/images/sasha/синяя клякса.svg"></div>
+      <div class="main__card_sert"><img src="./assets/images/sasha/СЕРТИФИКАТ.svg"></div>
+      <div class="main__card_logo"><img src="./assets/images/sasha/лого.svg"></div>
+      <div class="main__card_text1"><img src="./assets/images/sasha/Катание на квадроциклах.svg"></div>
+      <div class="main__card_text2"><img src="./assets/images/sasha/Маршрут_ Лесная прогулка.svg"></div>
+    </div>
+  </div>
 
 
 
-<div class="sertificate"></div>
-<div class="vopros_otvet"></div>
-<div class="dop_uslugi"></div>
+</div>
+
+
+
 
 
 <!--------------------------------Question section------------------------------->
