--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
             </div>
           </div>
         </div>
+        </div>
         <!--------------------------------Sertificate section------------------------------->
         <div class="main__sertificate">
           <div class="main__sertificate_title"><img src="./assets/images/sasha/Подарочный сертификат.svg"></div>
