fix: validator errors from info&routs

--- a/index.html
+++ b/index.html
@@ -56,34 +56,34 @@
       </div>
     </header>
 
-
+    <!--info section start-->
     <div class="info">
       <div class="container">
         <div class="info__items">
           <div class="info__item">
             <div class="info__img-1">
-              <img class="info__icon" src="./assets/images/info/i-1.svg">
+              <img class="info__icon" src="./assets/images/info/i-1.svg" alt="info icon">
             </div>
             <h3 class="info__title">Увлекательные экскурсии</h3>
             <p class="info__text"> Маршруты от лесных дорожек <br> до полного бездорожья!</p>
           </div>
           <div class="info__item">
             <div class="info__img-2">
-              <img class="info__icon" src="./assets/images/info/i-2.svg">
+              <img class="info__icon" src="./assets/images/info/i-2.svg" alt="info icon">
             </div>
             <h3 class="info__title">Надежная техника</h3>
             <p class="info__text">18 квадроциклов всех японских <br> брендов</p>
           </div>
           <div class="info__item">
             <div class="info__img-3">
-              <img class="info__icon-4" src="./assets/images/info/i-3.svg">
+              <img class="info__icon-4" src="./assets/images/info/i-3.svg" alt="info icon">
             </div>
             <h3 class="info__title">Экипировка бесплатно</h3>
             <p class="info__text">Необходимая экипировка <br> выдается бесплатно</p>
           </div>
           <div class="info__item">
             <div class="info__img-4">
-              <img class="info__icon" src="./assets/images/info/i-4.svg">
+              <img class="info__icon" src="./assets/images/info/i-4.svg" alt="info icon">
             </div>
             <h3 class="info__title">Опытные инструктора</h3>
             <p class="info__text">Обеспечат полную безопасность <br> Вашего отдыха</p>
@@ -91,11 +91,11 @@
         </div>
       </div>
     </div>
-
+    <!--info section end-->
     <main>
+      <!--routs section start-->
       <section class="routs">
         <h2 class="routs__title">Наши маршруты</h2>
-        <!---------------------------------BASIC ROUTE--------------------------------->
         <div class="routes__inner">
           <div class="basic">
             <div class="route__content--basic">
@@ -112,46 +112,36 @@
                   -Грозовые Ворота - Шашлыки - Цыгельский водопад (чаша любви) -
                   -Форсаж</p>
               </div>
-              <button class="btn-details">
-                <a class="btn-details__link" href="#">Подробнее</a>
-              </button>
-              <button class="btn-reserve">
-                <a class="btn-reserve__link" href="#">Забронировать</a>
-              </button>
+              <button class="btn-details">Подробнее</button>
+              <button class="btn-reserve">Забронировать</button>
             </div>
-
             <div class="swiper-container">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="img-container">
-                    <img class="swiper-slide__img" src="/assets/images/routs/bsc-1.webp" alt="">
+                    <img class="swiper-slide__img" src="/assets/images/routs/bsc-1.webp" alt="photo">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="img-container">
-                    <img class="swiper-slide__img" src="/assets/images/routs/bsc-2.webp" alt="">
+                    <img class="swiper-slide__img" src="/assets/images/routs/bsc-2.webp" alt="photo">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="img-container">
-                    <img class="swiper-slide__img" src="/assets/images/routs/bsc-3.webp" alt="">
+                    <img class="swiper-slide__img" src="/assets/images/routs/bsc-3.webp" alt="photo">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="img-container">
-                    <img class="swiper-slide__img" src="/assets/images/routs/bsc-4.webp" alt="">
+                    <img class="swiper-slide__img" src="/assets/images/routs/bsc-4.webp" alt="photo">
                   </div>
                 </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
-
           </div>
-
-          <!------------------------------EXTANTION ROUTE------------------------------------->
-
           <div class="extantion">
-
             <div class="swiper-container--2">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -177,7 +167,6 @@
               </div>
               <div class="swiper-pagination--2"></div>
             </div>
-
             <div class="route__content--ext">
               <p class="route__title-2">РАСШИРЕННЫЙ</p>
               <p class="route__price">от 16000</p>
@@ -192,18 +181,10 @@
                   -Грозовые Ворота - Шашлыки - Цыгельский водопад (чаша любви) -
                   -Форсаж</p>
               </div>
-              <button class="btn-details">
-                <a class="btn-details__link" href="#">Подробнее</a>
-              </button>
-              <button class="btn-reserve">
-                <a class="btn-reserve__link" href="#">Забронировать</a>
-              </button>
+              <button class="btn-details">Подробнее</button>
+              <button class="btn-reserve">Забронировать</button>
             </div>
-
           </div>
-
-          <!------------------------------EXPERIENCE ROUTE----------------------------->
-
           <div class="experience">
             <div class="route__content--exp">
               <p class="route__title-2">Experience</p>
@@ -218,14 +199,9 @@
                 <p class="route__description-text">Форсаж - Голубая бухта – Заброшенная Тур База – Сухогруз Рио –
                   Форсаж</p>
               </div>
-              <button class="btn-details">
-                <a class="btn-details__link" href="#">Подробнее</a>
-              </button>
-              <button class="btn-reserve">
-                <a class="btn-reserve__link" href="#">Забронировать</a>
-              </button>
+              <button class="btn-details">Подробнее</button>
+              <button class="btn-reserve">Забронировать</button>
             </div>
-
             <div class="swiper-container">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -252,11 +228,9 @@
               <div class="swiper-pagination"></div>
             </div>
           </div>
-
         </div>
-
       </section>
-
+      <!--routs section end-->
       <!--------------------------------Sale section------------------------------->
       <div class="zatrudnyaetes_vibrat_marshrut"></div>
       <div class="photoslider"></div>
